added dither switch
- added dithered versions of photos
- added toggle switch to enable/disable dither
- asset management
- changed how the header manages padding to accomodate for dither button

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<div class='links'>
 				[ path: 
 				<a href="/">home</a>
-				] 
+				]
 			</div>
 		</div>
 
@@ -39,11 +39,12 @@
 			<hr>
 			<br>
 			<div class='flex-container'>
-				<div class='leftside'>
-					<img id="randImg" src='' />
-					<p style='line-height: 0.25;'>this is a photo of <a href="me.html">me</a>.</p>
+				<div class='leftside' style="display: flex; align-items: center; justify-content: center;">
+					<figure style="width: 200%;">
+						<img id="randImg" src=''/>
+						<figcaption>this is a photo of <a href="me.html">me</a>.</figcaption>
+					</figure>
 				</div>
-
 				<div class='rightside'>
 					<h2>welcome to <i>myspace!</i></h2>
 					<p title='there is always a hidden meaning.'><small>this is my second paragraph with no hidden meaning.</small></p>
@@ -66,7 +67,7 @@
 		created by garrett.
 		<br>
 		<br>this website is designed to be viewed on desktop. | last updated:
-		<span id="lastUpdateDate">11 may 2024</span>.
+		<span id="lastUpdateDate">15 may 2024</span>.
 	</footer>
 
 </body>
