--- a/projects/cerialv2.html
+++ b/projects/cerialv2.html
@@ -19,7 +19,8 @@
 				<a href='../projects.html'>projects</a>
 				/
 				<a href="cerialv2.html">cerial ver. 2</a>
-				] 
+				]
+				<img id="dither_button" src="../assets/dither-toggle-button.png" style="float: right;" onclick="backToOriginal()">
 			</div>
 		</div>
 
@@ -46,7 +47,7 @@
 			<!-- entry 1 -->
 			<div class="flex-container">
 				<div class="leftside" style="display: flex; align-items: center; justify-content: center;">
-					<img src="../assets/cerial ver2.jpg" id="borderimg1" style="max-width: 35%; max-height: 100vh; margin: auto;">
+					<img src="../assets/cerial-ver2-dither.jpg" class="borderimg1class" style="max-width: 35%; max-height: 100vh; margin: auto;">
 				</div>
 				<div class="rightside cerialEntry" style="display: flex; align-items: center; justify-content: left;">
 					<p class="mobileCenterText" style="font-size: 80%;"><i><b>dec 12, 2023.</b></i>
@@ -98,14 +99,14 @@
 					</p>
 				</div>
 				<div class="rightsidecenter" style="display: flex; align-items: center; justify-content: center;">
-					<img src="../assets/cerial2_insane-ramblings.jpg" id="borderimg1" style="max-width: 45%; max-height: 100vh; margin: auto;">
+					<img src="../assets/cerial2_insane-ramblings-dither.jpg" class="borderimg1class" style="max-width: 45%; max-height: 100vh; margin: auto;">
 				</div>
 			</div>
 			<br>
 			<!-- entry 3 -->
 			<div class="flex-container">
 				<div class="leftside" style="display: flex; align-items: center; justify-content: center;">
-					<img src="../assets/cerial2_testing-cables.jpg" id="borderimg1" style="max-width: 45%; max-height: 100vh; margin: auto;">
+					<img src="../assets/cerial2_testing-cables-dither.jpg" class="borderimg1class" style="max-width: 45%; max-height: 100vh; margin: auto;">
 				</div>
 				<div class="rightside cerialEntry" style="display: flex; align-items: center; justify-content: left;">
 					<p class="mobileCenterText" style="font-size: 80%;"><i><b>dec 18, 2023.</b></i>
@@ -170,7 +171,7 @@
 					</p>
 				</div>
 				<div class="rightsidecenter" style="display: flex; align-items: center; justify-content: center;">
-					<img src="../assets/cerial2_first-time-operational.jpg" id="borderimg1" style="max-width: 45%; max-height: 100vh; margin: auto;">
+					<img src="../assets/cerial2_first-time-operational-dither.jpg" class="borderimg1class" style="max-width: 45%; max-height: 100vh; margin: auto;">
 				</div>
 			</div>
 		</div>
@@ -179,6 +180,27 @@
 	<footer>
 		created by garrett.
 	</footer>
-
 </body>
+<script>
+	var projectImageList = document.getElementsByClassName('borderimg1class');
+	var ditherButton = document.getElementById('dither_button');
+
+	function backToOriginal() {
+		for (let i = 0; i < projectImageList.length; i++) {
+			var currentSource = String(projectImageList[i].src);
+			ditheredString = currentSource.replace('-dither', '');
+			projectImageList[i].src = ditheredString;
+		}
+		ditherButton.onclick = replaceWithDither;
+	}
+	
+	function replaceWithDither() {
+		for (let i = 0; i < projectImageList.length; i++) {
+			var currentSource = String(projectImageList[i].src);
+			ditheredString = currentSource.slice(0,currentSource.length-4)+'-dither'+currentSource.slice(currentSource.length-4);
+			projectImageList[i].src = ditheredString;
+		}
+		ditherButton.onclick = backToOriginal;
+	}
+</script>
 </html>
