added journal entry and upcoming projects
-journal entry jul 2024
-censor10.gif
-upcoming projects
-span modified in styles.css to include display:block;
-rewrote binauralobjects rightsidecenter to center images relative to size of text on opposite side

--- a/projects/binauralobjectsfeb24.html
+++ b/projects/binauralobjectsfeb24.html
@@ -81,7 +81,7 @@
                         <br>besides, you've arrived at your destination, and it's time to <button id="start">start.</button>
                     </p>
                 </div>
-                <div class="rightsidecenter">
+                <div class="rightsidecenter" style="display: flex; align-items: center; justify-content: center;">
                     <img src="../assets/danse-ku100subway-dither.jpg" class="borderimg1class" style="max-width: 40%; max-height: 100vh;">
                 </div>
             </div>
