--- a/aftw/aftw-project.html
+++ b/aftw/aftw-project.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <title>Audio for the Web</title>
 </head>
 <body>
@@ -34,4 +34,24 @@
 
     <script src="./main.js"></script>
 </body>
+<style>
+    .play-pause {
+        margin-top: 10vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .on-buttons {
+        /* height: 10vh; */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .off-buttons {
+        /* height: 10vh; */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+</style>
 </html>
