--- a/aftw/aftw-project.html
+++ b/aftw/aftw-project.html
@@ -3,10 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel='icon' type='image/x-icon' href='../assets/the-best-fav.gif'>
     <link rel="stylesheet" href="../styles.css">
-    <title>Audio for the Web</title>
+    <link href='https://fonts.googleapis.com/css?family=DotGothic16' rel='stylesheet'>
+    <title>Audio for the Web Assignment #1</title>
 </head>
 <body>
+    <div class='header'>
+        <div class='links'>
+            [ path: 
+            <a href="/">home</a>
+            ]
+        </div>
+    </div>
+
+    <div class='container'>
+        <div class='title'>
+            <h1>hytheaway</h1>
+            <h6><i>(.github.io)</i></h6>
+        </div>
+        <div class='navigationbar'>
+            <ul>
+                <li><a href='/'>home</a></li>
+                |
+                <li><a href='../projects.html'>projects</a></li>
+                |
+                <li><a href='../journal.html'>journal</a></li>
+                |
+                <li><a href='../contact.html'>contact</a></li>
+            </ul>
+        </div>
+        <hr>
+    </div>
+
+
     <audio src="./audio/HRTF-AFTW-Cajon.wav" class="cajon"></audio>
     <audio src="./audio/HRTF-AFTW-Cabasa.wav" class="cabasa"></audio>
     <audio src="./audio/HRTF-AFTW-Bass.wav" class="bass"></audio>
