--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		created by garrett.
 		<br>
 		<br>this website is designed to be viewed on desktop. | last updated:
-		<span id="lastUpdateDate">02 sept 2024</span>.
+		<span id="lastUpdateDate" style="display: initial;">15 nov 2024</span>.
 	</footer>
 
 </body>
