--- a/journal.html
+++ b/journal.html
@@ -42,8 +42,8 @@
 			<br>
 			<div id="borderimg1" class="sidenav">
 				<span style="text-align: center; background-color: gainsboro; display: block;"><b>-2024-</b></span>
-				<!-- <a class="active" href="#aug2024" id="aug2024nav" onclick="navBarActive('aug2024nav')">aug 2024</a> -->
-				<!-- <a href="#jul2024" id="jul2024nav" onclick="navBarActive('jul2024nav')">jul 2024</a> -->
+				<a class="active" href="#aug2024" id="aug2024nav" onclick="navBarActive('aug2024nav')">aug 2024</a>
+				<a href="#jul2024" id="jul2024nav" onclick="navBarActive('jul2024nav')">jul 2024</a>
 				<a href="#may2024" id="may2024nav" onclick="navBarActive('may2024nav')">may 2024</a>
 				<a href="#apr2024" id="apr2024nav" onclick="navBarActive('apr2024nav')">apr 2024</a>
 				<!-- <a href="#mar2024" id="mar2024nav" onclick="navBarActive('mar2024nav')">mar 2024</a>
@@ -53,6 +53,181 @@
 				<a href="#dec2023" id="dec2023nav" onclick="navBarActive('dec2023nav')">dec 2023</a>
 			</div>
 			<div class="main">
+				<!-- new article -->
+				<article id="aug2024">
+					<!-- article title -->
+					<h3 style="text-align: right;">ai (aug 2024)</h3>
+					<div class="flex-container" style='border-bottom: 2px dashed lightgrey;'>
+						<div class="rightside" style="text-align: right;">
+							<p style="font-size: 90%;">
+								<span style="display: inline; font-size: 70%;">(for variety's sake, we're on the right side for this one.)</span>
+								<br>
+								<br>ai is slop. everything done with ai is slop. this isn't an opinion.
+								<br>
+								<br>ai, which has become shorthand for gen ai, which has become shorthand for generative ai, which has become shorthand for generative artificial intelligence
+								is what happens when you take a freshly created homunculus and feed it the world's knowledge without discretion. chat gpt is what happens when you start asking that homunculus questions.
+								<br>
+								<br>did you catch that? it was subtle. blink and ya miss it.
+								<br>here, i'll slow it down for you:
+								<br>
+								<br><span style="text-align: center;">without discretion.</span>
+								<br>
+								<br>an inherent property of using ai like this is that it <i>will</i> create exclusively slop. 
+								<br>sure, you can add all your fancy little weights and prompts, pathetically begging your machine not to tell people to eat elmer's glue.
+								<br>but if you're at that point, you might as well start over. another homunculus down the drain.
+								<br>and if you start over, are you going to feed it the same material? of course not. that would just result in the same homunulus you just discarded.
+								<br>this time, you'll be smart. you'll be crafty. you'll be mama's little genius.
+								<br>
+								<br>no, this time, you'll only feed it <i>some</i> of the world's knowledge.
+								<br>maybe it'll be a finance homunculus. or a material sciences homunculus.
+								<br>your smrik breaks into a laugh as your belly fills with content. you've fixed it. you've solved the problem, and you did it before anyone else could think of it.
+								<br>as you lean back in your pleather armchair, sipping <span style="display: inline;" title="or, alternatively, milk from a chalice">watered-down franzia from a snifter</span>, you begin to rent out these homunuli
+								as consultants to financial institutions and chemical research labs. they've been trained with more relavent knowledge than any human could contain.
+								<br>
+								<br>they'll be better at any job because they'll know more about any single job. and, you remind yourself, the only thing that makes someone good at their
+								job is how much they know about it.
+								<br>but, as you close your eyes and let the wave of self-satisfaction wash over you, a voice nags from the corners of your mind.
+								<span style="text-align: left; font-size: 50%;">...crit..al th...ing...</span>
+								you can't quite seem to shake it.
+								<span style="text-align: center; font-size: 65%;">...critic.. ..inking...</span>
+								what <i>is</i> that nagging? you couldn't have missed something.
+								<br>.
+								<br>..
+								<br>...
+								<br>
+								<span style="text-align:end; font-size: 80%;">...critical... <span style="display: inline; font-size: 110%;">...t<span style="display: inline; font-size: 110%;">h</span><span style="display: inline; font-size: 110%;">i<span style="display: inline; font-size: 110%;">n<span style="display: inline; font-size: 110%;">k<span style="display: inline; font-size: 110%;">i<span style="display: inline; font-size: 110%;">n<span style="display: inline; font-size: 110%;">g!!!</span></span></span></span></span></span></span></span>
+								<br>
+								<span style="text-align: center; font-size: 130%;">you shoot awake, eyes buldging half out of their own sockets as your hand races and fumbles its way into your pocket to reach for your phone,
+									spilling napa valley's finest all along the sleeve of your child-labor tweed jacket and hulk funko pop.
+								</span>
+								<br>it's too late.
+								<br>the homunculi you sold to these businesses are utterly incapable of doing the jobs that these companies leased them for.
+								<br>with a shaky hand, you draw back the curtain and look outside. the mob has already assembled, pitchforks and medieval torches.
+								<br>
+								<br>
+								<br>the problem with imbuing a homunculus with all the world's knowledge, even on a simple topic, is that it will only ever know the work that has been done before.
+								<br>it will only spit out the problems that have already been solved. you can't teach a homunculus knowledge that doesn't exist yet.
+								<br>but, this homunculus knows <i>everything</i>, right? so, what happens when you ask it a question that doesn't have an answer?
+								<br>it'll hallucinate. it'll believe that, if it's been asked a question, then there <i>must</i> be some sort of answer.
+								<br>and, can you blame it? it has never known of a world where "i don't know" is an acceptable response.
+								<br>
+								<br>these homunculi lack the ability to take their vast amount of knowledge and apply them to solve a unique problem.
+								<br>in reality, that's what critical thinking is.
+								<br>at most, they've become repositories of knowledge. ask them any question, and they'll give you an answer (correct or not).
+								<br>ask them to do a task, and the best they can do is find a source of someone else who has done that task. they're knowledgable, not intelligent.
+								<br>unambiguously, the delineation between "knowledge" and "intelligence" is application.
+								<br>
+								<br>these homunculi were never going to be able to replace the workers. every job, no matter how menial, requires a level of critical thinking that far exceeds the
+								operating potential of any homunculus. even if you, say, gave the homunculus mechanized legs and arms, preprogrammed to execute a basic series of tasks after being called
+								by the homunculus, the homunculus' tendency to hallucinate when encountering unexpected circumstances necessitates a non-homunculus worker to validate every task or batch
+								of tasks they complete, if not having to be peering over their shoulder constantly.
+								<br>
+								<br>crucially, <i>this will not improve over time</i>.
+								<br>the homunculus will not wake up one day, suddenly equipped with refined critical thinking skills - it just won't happen. the homunculus is not a critical-thinking machine.
+								there is no latent potential to unlock. it is absent <i>all</i> mental faculites besides database-like storage and democratically elected responses based on how frequently
+								an answer appears in the knowledge-base given to them. 
+								<br>further, sure, you could tell it to never recite an answer that is negative in nature (re:elmer's glue), and it will obey that order. that is, until someone else gives it the exact
+								opposite order. the homunculus knows no master, and it won't obey you more just because you created it. 
+								<br>
+								<br>this might beg the question, why bother using a homunculus if it is prone to so many shortcomings? why not a more intelligent being? a loyal dog? a crow?
+								<br>because these shortcomings are by design.
+								<br>
+								<br>for what is a homunculus, but a vessel to project upon?
+								<br>
+								<br>
+								<span style="text-align: center;">---</span>
+								as of writing, we're encountering a new problem with what we call ai.
+								<br>it has been unleased to the world, and the content that it generates is now being added to databases, the same databases that it pulls from to generate new content.
+								<br>it's goal is to generate facsimiles of human-born content, generally in an inscrutible way. often, so inscrutible that the arms race between ai content generation and
+								ai-generated content checkers is constantly in flux. if we, as discerning people, are having great difficulty creating tools that can reliably tell what content is ai generated,
+								how can we expect a complex algorithim designed to mimic human approaches to?
+								<br>we can't, and more importantly, we don't. it's easy money not to. 
+								<br>
+								<br>"who cares, right?",
+								<br>"we'll leave that problem to someone else", 
+								<br>"it doesn't affect us", 
+								<br>so on and so forth. 
+								<br>
+								<br>yeah, dude, that's a cool perspective to take and all, but your pet robot is beginning to choke on its own vomit. 
+							</p>
+						</div>
+					</div>
+				</article>
+				<!-- new article -->
+				<article id="jul2024">
+					<!-- article title -->
+					<h3>the immersion question (jul 2024)</h3>
+					<div class="flex-container" style='border-bottom: 2px dashed lightgrey;'>
+						<div class="leftside" style="text-align: left;">
+							<p style="font-size: 90%;">
+								by far, the question that i dislike the most within the world of immersive audio.
+								<br>
+								<br>it's been a moment since i last posted. unfortunately, most of my time has been dedicated to projects that i am unable to talk about here, either for the time being or forever. however,
+								there is always room to talk about one of the most infuriatingly meaningful and meaningless debates within the vast world of immersive audio:
+								</p>
+								<br><p style="text-align: center; font-size: 120%;" title="or, alternatively, what does it mean for audio to be immersive?">what makes audio immersive?</p>
+								<br><p style="font-size: 90%;">on the surface, it's a pretty obvious question. i mean, clearly we need to work out what it means for something to be "immersive" before we can go around calling
+								whatever we produce "immersive".
+								<br>
+								<br>okay, well, how about this:
+								<span style="text-align: center;"><i>"audio is immersive if it takes advantage of the unique properties offered by immersive audio systems."</i></span>
+								<br>yeah, this is definitely a good start, but still only getting about a little bit of the way there. but, what makes an audio system immersive? having a bunch of speakers? then, what about binaural
+								audio? or VR audio? then, maybe an audio system is immersive if the audio sounds like it's coming from all around you. but then, that's not the system's doing, that's the content. and, if the quality
+								of immersive is exclusively content-based, then how do we distinguish systems that are built with immersive content in mind?
+								<br>
+								<br>so, the answer must be either somewhere in-between "audio is immersive if the system is immersive" and "audio is immersive if it sounds immersive", or must be encompassing of both.
+								<br>
+								<br>the topic is still very much up for debate (or more accurately, interpretation), but people seem to have generally landed on a definition that includes both, delving specifically into the psychoacoustic attributes
+								of immersion. in some technical way, an audio system is only immersive if it's capable of delivering an immersive experience, which could be done with as few as one speaker/sound source.
+								but, that's at odds with the commerical market, which has specifically created a subset of "immersive audio" products that center around multichannel configurations and their folddowns to binaural.
+								<br>
+								<br>ultimately, this ambiguity will be either difficult or entirely impossible to resolve, and it's not so much a matter of narrow or broad interpretations.
+								what consitutues an "immersive" experience to one person may not evoke the same reaction to another. one person might find a stereo mix utterly all-encompassing, while
+								another might find it flat and unconvincing. likewise, two different people, both perfectly in the sweet spot, may not agree on how compelling an atmos mix is. 
+								<br>
+								<br>this makes it sound like i'm on the side of those who believe that the content is what makes audio immersive, regardless of its associated technical capabilities.
+								in that case, it would be easy to say that <a href="https://en.wikipedia.org/wiki/The_purpose_of_a_system_is_what_it_does" target="_blank">the purpose of a system is what it does</a>,
+								and to end the conversation there.
+								<br>
+								<br>however, i cannot entirely agree with that perspective, because a full adoption of that mentality inherently either states that for each person in the world, there is at least one piece of audio
+								content that they would describe as "immersive" (to the same or nearly the same extent as if it were played back on an immersive system), even if it was played back on a system not intended for immersive audio experiences,
+								or states that there are some people with full faculites intact who cannot experience audio as immersive.
+								if a person requires a purpose-built immersive audio system in order to experience audio as immersive, then that demonstrates that content alone is not sufficient in
+								creating an immersive experience.
+								<br>
+								<br>on the other hand, it can be an equally poor perspective to believe that what makes audio immersive is the system its played back on. i don't imagine the reasons
+								for this are all too difficult to determine, but this perspective's simplest and most compelling failing is that, no matter how many speakers or
+								orders you have, a bad multichannel/binaural mix will never be immersive.
+								<br>remember that the purpose of a system is what it does.
+								therefore, an immersive audio system that fails to always produce immersive audio is not an immersive audio system. it is, at best, a "sometimes immersive audio system".
+								<br>
+								<br><span style="text-align: center;">so, why do i hate this question so much?</span>
+								<br>cause it sucks, dude.
+								<br>
+								<br>there's no concrete answer to it, and that's not a bad thing by itself. what makes that a bad thing is that, because there's no concrete answer to it (and in my opinion, there never will),
+								people <i>love</i> to spend all their time in a circle with their hands on their chins postulating on the meaning on immersion and life and humanity and its applicability to audio, instead of
+								going out there and actually putting those good brains to proper use. these people (a vocal minority, i will add) <i><b>thrive</b></i> on the very nature of this unanswerable question, because it means that they get to push their thoughts forward,
+								hear themselves speak, correct other people, trample over unrelated conversations, but ultimately take no responsibility for any of it under the pretense of "well, it <i>is</i> an unanswerable question" with a <span title="read: shit-eating grin" style="display: inline;">smirk</span> on their face.
+								the question of "what makes audio immersive" becomes the ulimate game of "ummm, actually" in a desperate attempt to prove themselves more knowledgable about a
+								wholly self-constructed classification, topic, and argument, and it's completely disengaging to anyone trying to get a feel for this field.
+								<br>
+								<br>yes, it's an important question, but what good is that if no one actually cares about the answer? has the lack of an answer stopped literally anyone from progressing research in the field?
+								has the lack of an answer prevented any company from attempting to establish a vertical for themselves in this brand new form of content creation and consumption? in fact, the lack of an answer
+								doesn't even prevent any single content creator from engaging in the field. but these petulant, pedantic, self-aggrandizing <span id="profanity" style="display: none;" onmouseout="this.style.display='none'; membersOfMutual.style.display='inline'"><b>circlejerking self-proclaimed "intellectuals"</b></span><span id="membersOfMutual" style="font-family: 'snell roundhand', cursive; font-size: 120%; display: inline; background: url(assets/censor10.gif) repeat-x;" onmouseover="this.style.display='none'; profanity.style.display='inline'">members of a mutual admiration society</span> certainly
+								<i>do</i> prevent greener individuals from creating the very content that this field is so desperately in need of.
+								<br>
+								<br>honestly, these people are a small, small, small subset of those discussing the question of immersion. there have been some amazing papers published that do make a genuine effort to investigate the qualities of immersion, and how best to apply those
+								finding to content created for immersive experiences. i've long felt that the question is important but the debate isn't.
+								the field of immersive audio has reached a point where the technology is having a difficult time developing any further without a sizeable amount of content being produced for it,
+								and while most of the reason for that (in my opinion) has to do with the significant workflow changes associated with creating immersive content, we should be focusing on
+								minimizing any and every other deterrant for newcomers. no one wants to pour their valuable time and energy into a field they are constantly being told they don't understand.
+								<br>
+								<br>you don't need to educate every person you meet. people won't remember you for being smart, but they will remember you for being overbearing. so many people involved in this field are smart in so many ways. distinguish yourself by being kind.
+								because, in a world where you can be anything, why would you choose to be anything but kind?
+							</p>
+						</div>
+					</div>
+				</article>
 				<!-- new article -->
 				<article id="may2024">
 					<!-- article title -->
@@ -191,7 +366,7 @@
 
 	// each month for the articles are listed here in reverse chronological order (so that i=0 is always the most recent article)
 	// when a new article is published, please add the month and year here:
-	const current_articles = ['may2024', 'apr2024', 'dec2023'];
+	const current_articles = ['aug2024', 'jul2024', 'may2024', 'apr2024', 'dec2023'];
 
 	// most recent article is set to be the default:
 	var previousMonthNav = document.getElementById(current_articles[0].concat('nav'));
