testing folder structure

--- a/me.html
+++ b/me.html
@@ -65,8 +65,8 @@
                 <div id="meAnswers" class="rightside" style="margin-left: 5px; font-size: 90%; margin-right: 40vh;">
                     all sorts.
                     <br>
-                    <br>during my undergrad i got a degree in audio engineering & sound production, i minored in scoring for visual media,
-                    & i got a certificate in analogue audio electronics.
+                    <br>during my undergrad i received a degree in audio engineering & sound production, i minored in scoring for visual media,
+                    & i received a certificate in analogue audio electronics.
                     since then, i've focused my interests toward researching psychoacoustics as they relate to immersive audio.
                     <br>
                     <br>outside of audio, i am also:
