--- a/fav-music/index.html
+++ b/fav-music/index.html
@@ -15,9 +15,9 @@
         <div class='header'>
             <div class='links'>
                 [ path:
-                <a href="../">home</a>
+                <a href="/">home</a>
                 /
-                <a href="/">fav music</a>
+                <a href="/fav-music/">fav music</a>
                 ]
             </div>
         </div>
@@ -64,7 +64,43 @@
                 </div>
                 <div class="rightside">
                     <p style="font-size: 90%;">
-                        test.
+                        - keiichi okabe - <i>nier gestalt & replicant (original soundtrack)</i> (2010)
+                        <br>- keiichi okabe - <i>nier: automata (original soundtrack)</i> (2017)
+                        <br>- yoko shimomura - <i>final fantasy xv (original soundtrack)</i> (2016)
+                        <br>- junya nakano, masashi hamauzu, nobuo uematsu - <i>final fantasy x (original soundtrack)</i> (2001)
+                        <br>- nobuo uematsu, shotaro shima, yoshinori nakamura, masashi hamauzu, mitsuto suzuki, tadayoshi makino, yoshitaka suzuki, daiki ishikawa, tsuyoshi sekito, nozomi toki, yasunori nishiki, keiki kobayashi, takafumi imamura, yosh - <i>final fantasy vii remake (original soundtrack)</i> (2020)
+                        <br>- nobuo uematsu - <i>final fantasy vii (original soundtrack)</i> (1997)
+                        <br>- junichi masuda, go ichinose, hitomi sato, morikazu aoki - <i>pokémon diamond & pokémon pearl: super music collection</i> (2006)
+                        <br>- yasunori mitsuda, ace (tomori kudo, chico), kenji hiramatsu manami kiyota - <i>xenoblade chronicles 2 (original soundtrack)</i> (2018)
+                        <br>- takeharu ishimoto - <i>the world ends with you (original soundtrack)</i> (2007)
+                        <br>- casiopea - <i>mint jams (live)</i> (1982)
+                        <br>- tricot - <i>t h e</i> (2013)
+                        <br>- bo en - <i>pale machine</i> (2013)
+                        <br>- bo en - <i>pale machine 2</i> (2023)
+                        <br>- number girl - <i>シブヤRockstransformed状態</i> (1999)
+                        <br>- lamb of god - <i>ashes of the wake</i> (2004)
+                        <br>- a picture of her - <i>c</i> (2013)
+                        <br>- fox capture plan - <i>discovery</i> (2020)
+                        <br>- l'impératrice - <i>tako tsubo</i> (2021)
+                        <br>- mastodon - <i>leviathan</i> (2004)
+                        <br>- trivium - <i>the sin and the sentence</i> (2017)
+                        <br>- gojira - <i>from mars to sirus</i> (2005)
+                        <br>- sweet trip - <i>velocity:design:comfort.</i> (2003)
+                        <br>- animals as leaders - <i>animals as leaders</i> (2009)
+                        <br>- animals as leaders - <i>the joy of motion</i> (2014)
+                        <br>- animals as leaders - <i>parrhesia</i> (2022)
+                        <br>- tsukasa masuko, shoji meguro, ryota kozuka, toshiki konishi, kenichi tsuchiya - <i>shin megami tensei v: vegeance original soundtrack</i> (2024)
+                        <br>- shoji meguro, kenichi tsuchiya, toshiko tasaki, tsukasa masuko - <i>shin megami tensei iii nocturne original soundtrack</i> (2003)
+                        <br>- sithu aye - <i>set course for andromeda</i> (2016)
+                        <br>- kelly clarkson - <i>breakaway</i> (2004)
+                        <br>- garoad - <i>va-11 hall-a (original soundtrack: second round)</i> (2016)
+                        <br>- my chemical romance - <i>three cheers for sweet revenge</i> (2004)
+                        <br>- frédéric chopin (performed by krystian zimerman) - <i>chopin: ballades - barcarolle - fantaisie</i> (1988)
+                        <br>- frédéric chopin (performed by evegeny kissin) - <i>chopin: recorded at carnegie hall</i> (1993)
+                        <br>- herbert howells (performed by the choir of king's college, cambridge, directed by sir stephen cleobury) - <i>howells: church music</i> (1992)
+                        <br>- bill evans trio - <i>portrait in jazz</i> (1959)
+                        <br>- cq - <i>communication, cultural, curiosity quotient</i> (2016)
+                        <br>- sum 41 - <i>chuck</i> (2004)
                     </p>
                 </div>
             </div>
